experiments chapter is in action

--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -120,12 +120,16 @@
 \chapter{The Model}
 \label{theModel}
 \input{chapters/model/model}
+\input{chapters/model/objectiveFunction}
+\input{chapters/model/algorithm}
 
 \chapter{Experiments and Results}
 \label{experimentsAndResults}
 \input{chapters/experimentsAndResults/experimentsAndResults}
 \input{chapters/experimentsAndResults/experimentalPlan}
 \input{chapters/experimentsAndResults/experimentalSetup}
+\input{chapters/experimentsAndResults/inputData}
+\input{chapters/experimentsAndResults/algorithmParameters}
 \input{chapters/experimentsAndResults/experimentalResults}
 
 \chapter{Evaluation and Conclusion}
