Title and related work

--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -19,6 +19,7 @@
 \usepackage[]{algorithm2e}
 %\usepackage[center]					% For cropping documents
 \usepackage{titlesec}
+\usepackage[usenames,dvipsnames]{xcolor}
 
 \usepackage{float}
 \setcitestyle{square}
@@ -39,7 +40,7 @@
 % Author
 % Fill in here, and use commands in the text. 
 \newcommand{\thesisAuthor}{Hanne Gunby and Susanne Gustavsen}
-\newcommand{\thesisTitle}{Optimizing bus routes using AI-methods}
+\newcommand{\thesisTitle}{\color{Magenta} The Fairy Tales of the Ant Princesses}
 \newcommand{\thesisType}{Masters Thesis}
 \newcommand{\thesisDate}{Spring 2014}
 
