changed research questions in protocol and added information about astar and dijkstras

--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -1,6 +1,7 @@
 % (C) Anders Kofod-Petersen
 \raggedbottom
 \documentclass[b5paper, twoside, titlepage, 10pt]{report}
+\setcounter{secnumdepth}{3}
 \usepackage[lmargin=25mm,rmargin=25mm,tmargin=27mm,bmargin=30mm]{geometry}
 %\documentclass[11pt, b5paper]{report}
 \usepackage[english]{babel}						% Correct English hyphenation
@@ -23,6 +24,7 @@
 
 \usepackage{float}
 \setcitestyle{square}
+
 
 % spacing: how to read {12pt plus 4pt minus 2pt}
 %           12pt is what we would like the spacing to be
