--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -1,3 +1,17 @@
+@book{russel10,
+    author    = "Stuart Russel and Peter Norvig",
+    title     = "Artificial Intelligence",
+    publisher = "PEARSON",
+    year      = "2010",
+}
+
+@book{cormen09,
+    author    = "Thomas H. Cormen and Charles E. Leiserson and Ronald L. Rivest and Clifford Stein",
+    title     = "Introduction to Algorithms",
+    publisher = "Massachusetts Institute of Technology",
+    year      = "2009",
+}
+
 @unpublished{mumford13,
     author  = "Christine L Mumford",
     title   = "Supplementary Material for: New Heuristic and Evolutionary Operators for the Multi-Objective Urban Transit Routing Problem, CEC 2013",
