--- a/thesis/appendices/protocol/finalprotocol.tex
+++ b/thesis/appendices/protocol/finalprotocol.tex
@@ -67,14 +67,32 @@ One of the goals for the environment package for transportation in Trondheim, ``
 \end{itemize}
 
 \textbf{This gives us the following research questions:}
+%\begin{enumerate}
+%\item What are the existing solutions to this problem?
+%\item Which swarm intelligence methods is best suited for optimizing? 
+%\item Is it practicle to represent and work with this route network as a graph database for this kind of methods?
+%\item Does this solution help optimize the bus routes? 
+%\end{enumerate}
+
 \begin{enumerate}
-\item What are the existing solutions to this problem?
-\item Which swarm intelligence methods is best suited for optimizing? 
-\item Is it practicle to represent and work with this route network as a graph database for this kind of methods?
-\item Does this solution help optimize the bus routes? 
+  \item Is swarm intelligence methods suitable for the vehicle routing problem?
+    \begin{enumerate}
+    \item What is the state-of-the-art in solving vehicle routing problems using swarm intelligence methods?
+    \item What changes have been done to the classical swarm intelligence-methods to improve them?
+  \end{enumerate}
+ 
+\item Have there been any attempts to combine different swarm intelligence-methods?
+
+    \begin{enumerate}
+    \item Is it efficient to combine attributes from different swarm intelligence-methods to solve the vehicle routing problem?
+    \item Is it possible to apply our algorithm to optimize bus routes in urban cities?
+  \end{enumerate}
+
+\item What are the possibilities and potential advantages of using a graph database in our implementation?
+\begin{enumerate}
+\item Is the features of graph databases useful in the optimization process? 
 \end{enumerate}
-
-
+\end{enumerate}
 
 %Todo: Skrive om Zotero
 
