A bit of everything

--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -21,8 +21,8 @@
 %\usepackage[center]					% For cropping documents
 \usepackage{titlesec}
 \usepackage[usenames,dvipsnames]{xcolor}
-
 \usepackage{float}
+\usepackage{enumitem}
 \setcitestyle{square}
 
 
