--- a/thesis/appendices/protocol/finalprotocol.tex
+++ b/thesis/appendices/protocol/finalprotocol.tex
@@ -74,24 +74,25 @@ One of the goals for the environment package for transportation in Trondheim, ``
 %\item Does this solution help optimize the bus routes? 
 %\end{enumerate}
 
-\begin{enumerate}
-  \item Is swarm intelligence methods suitable for the vehicle routing problem?
+\begin{enumerate}[label=\textbf{\arabic*})]
+\item 
     \begin{enumerate}
+    \item Is swarm intelligence methods suitable for the vehicle routing problem?
     \item What is the state-of-the-art in solving vehicle routing problems using swarm intelligence methods?
     \item What changes have been done to the classical swarm intelligence-methods to improve them?
-  \end{enumerate}
- 
-\item Have there been any attempts to combine different swarm intelligence-methods?
-
+    \item Have there been any attempts to combine different swarm intelligence-methods?
+    \end{enumerate}
+\item
     \begin{enumerate}
     \item Is it efficient to combine attributes from different swarm intelligence-methods to solve the vehicle routing problem?
     \item Is it possible to apply our algorithm to optimize bus routes in urban cities?
-  \end{enumerate}
+    \end{enumerate}
 
-\item What are the possibilities and potential advantages of using a graph database in our implementation?
-\begin{enumerate}
-\item Is the features of graph databases useful in the optimization process? 
-\end{enumerate}
+\item
+    \begin{enumerate}
+    \item What are the potential advantages and disadvantages of using a graph database in our implementation?
+    \item Is the features of graph databases useful in the optimization process? 
+    \end{enumerate}
 \end{enumerate}
 
 %Todo: Skrive om Zotero
