--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -1,3 +1,11 @@
+@book{bruggen14,
+    author    = "Rik Van Bruggen",
+    title     = "Learning Neo4j",
+    publisher = "Packt Publishing Ltd.",
+    year      = "2014",
+    month     = "August",
+}
+
 @book{russel10,
     author    = "Stuart Russel and Peter Norvig",
     title     = "Artificial Intelligence",
