Hey ho, it should only have been initialization of the algorithm but one thing lead to another

--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -23,6 +23,7 @@
 \usepackage[usenames,dvipsnames]{xcolor}
 \usepackage{float}
 \usepackage{enumitem}
+\usepackage{tabto}
 \setcitestyle{square}
 
 
