added related work as xhapter, moved problem statement to model

--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -117,13 +117,17 @@
 \input{chapters/backgroundTheoryAndMotivation/swarmIntelligence}
 \input{chapters/backgroundTheoryAndMotivation/graphdatabase}
 \input{chapters/backgroundTheoryAndMotivation/motivation}
-\input{chapters/backgroundTheoryAndMotivation/relatedWorkVol4}
-\input{chapters/backgroundTheoryAndMotivation/problemStatement}
 
+\chapter{Related Work}
+\label{relatedWork}
+\input{chapters/relatedWork/relatedWork}
+\input{chapters/relatedWork/structuredLiteratureReview}
+\input{chapters/relatedWork/relatedWorkVol4}
 
 \chapter{The Model}
 \label{theModel}
 \input{chapters/model/model}
+\input{chapters/model/problemStatement}
 \input{chapters/model/objectiveFunction}
 \input{chapters/model/algorithm}
 
