--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -119,17 +119,17 @@
 \input{chapters/backgroundTheoryAndMotivation/graphdatabase}
 \input{chapters/backgroundTheoryAndMotivation/motivation}
 
-\chapter{Related Work}
+\chapter{Preliminary Research Results}
 \label{relatedWork}
 \input{chapters/relatedWork/relatedWork}
 \input{chapters/relatedWork/structuredLiteratureReview}
 \input{chapters/relatedWork/relatedWorkVol4}
+\input{chapters/model/problemStatement}
 
-\chapter{The Model}
+\chapter{The Proposed Algorithm}
 \label{theModel}
 \input{chapters/model/model}
-\input{chapters/model/problemStatement}
-\input{chapters/model/objectiveFunction}
+\input{chapters/model/methodDescription}
 \input{chapters/model/algorithm}
 
 \chapter{Experiments and Results}
