--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -119,7 +119,7 @@
 \input{chapters/backgroundTheoryAndMotivation/graphdatabase}
 \input{chapters/backgroundTheoryAndMotivation/motivation}
 
-\chapter{Preparatory Research Results}
+\chapter{Preparatory Research}
 \label{relatedWork}
 \input{chapters/relatedWork/relatedWork}
 \input{chapters/relatedWork/structuredLiteratureReview}
