--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -101,6 +101,11 @@
 \listoftables
 \listoffigures
 \tableofcontents
+\clearpage
+
+\section*{Abbreviations}
+\input{chapters/abbreviations}
+\clearpage
 
 \chapter{Introduction}
 \label{introduction}
@@ -126,7 +131,7 @@
 \input{chapters/relatedWork/relatedWorkVol4}
 \input{chapters/model/problemStatement}
 
-\chapter{The Proposed Algorithm}
+\chapter{The Proposed Method}
 \label{theModel}
 \input{chapters/model/model}
 \input{chapters/model/methodDescription}
