first results from parameter settings evaporation

--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -135,6 +135,7 @@
 \label{theModel}
 \input{chapters/model/model}
 \input{chapters/model/methodDescription}
+\input{chapters/model/objectiveFunction}
 \input{chapters/model/algorithm}
 
 \chapter{Experiments and Results}
