--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -11,7 +11,7 @@
  	\hline
     50 & 50 & \textbf{1\%} & 0.5 & 0.5 & 10\% & 10\% & 1.0 & 10\% & 11.1 & 11.5 & 12.5 & -256.0 &-244.6 & -231.0  \\
     50 & 50 & \textbf{10\%} & 0.5 & 0.5 & 10\% & 10\% & 1.0 & 10\% & 11.1 & 11.6 & 12.8 & -254.0 & -241.0 & -209.0 \\
-    50 & 50 & \textbf{90\%} & 0.5 & 0.5 & 10\% & 10\% & 1.0 & 10\% &  ~ & ~ & ~ & ~ & ~ & ~  \\
+    50 & 50 & \textbf{90\%} & 0.5 & 0.5 & 10\% & 10\% & 1.0 & 10\% &  11.0 & 11.4 & 11.0 & -255.0 & -246.0 & -234.0  \\
 	\hline
     \end{tabular}
     \caption {Parameter settings experiments}
