results 90 percent again

--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -5,16 +5,34 @@
 
 \begin{sidewaystable}
     \centering
-	\begin{tabular}{|l|l|l|l|l|l|l|l|l||l|l|l|l|l|l|}
+	\begin{tabular}{|l|l|l|l|l|l|l|l|l|l||l|l|l|l|l|l|}
  	\hline
- 	$s$ & $i$ & $p_{e}$ & $p_{v}$ & $p_{b}$ & $BR$ &$IW$ & $FA$ & $CA$ &  $ATT(min)$ & $ATT(avg)$ & $ATT(max)$ & $T(min)$ & $T(avg)$ & $T(max)$\\
+ 	~ & $s$ & $i$ & $p_{e}$ & $p_{v}$ & $p_{b}$ & $BR$ &$IW$ & $FA$ & $CA$ &  $ATT(min)$ & $ATT(avg)$ & $ATT(max)$ & $T(min)$ & $T(avg)$ & $T(max)$\\
  	\hline
-    50 & 50 & \textbf{1\%} & 0.5 & 0.5 & 10\% & 10\% & 1.0 & 10\% & 11.1 & 11.5 & 12.5 & -256.0 &-244.6 & -231.0  \\
-    50 & 50 & \textbf{10\%} & 0.5 & 0.5 & 10\% & 10\% & 1.0 & 10\% & 11.1 & 11.6 & 12.8 & -254.0 & -241.0 & -209.0 \\
-    50 & 50 & \textbf{90\%} & 0.5 & 0.5 & 10\% & 10\% & 1.0 & 10\% &  11.0 & 11.4 & 11.0 & -255.0 & -246.0 & -234.0  \\
+    1 & 50 & 50 & \textbf{1\%} & 0.5 & 0.5 & 10\% & 10\% & 1.0 & 10\% & 11.1 & 11.5 & 12.5 & -256.0 &-244.6 & -231.0  \\
+    ~ & 50 & 50 & \textbf{10\%} & 0.5 & 0.5 & 10\% & 10\% & 1.0 & 10\% & 11.1 & 11.6 & 12.8 & -254.0 & -241.0 & -209.0 \\
+    ~ & 50 & 50 & \textbf{50\%} & 0.5 & 0.5 & 10\% & 10\% & 1.0 & 10\% & 11.1 & 11.6 & 12.8 & -254.0 & -246.4 & -225.0\\
+    ~ & 50 & 50 & \textbf{90\%} & 0.5 & 0.5 & 10\% & 10\% & 1.0 & 10\% &  11.3 & 11.6 & 12.4 & -259.0 & -240.9 & -221.0  \\
+    \hline
+    2 & 50 & 50 & 90\% & \textbf{0.5} & 0.5 & 10\% & 10\% & 1.0 & 10\% &  ~ & ~ & ~ & ~ & ~ & ~  \\
 	\hline
     \end{tabular}
     \caption {Parameter settings experiments}
     \label{table:parameterSettings}
 \end{sidewaystable}
+
+
+\begin{table}
+    
+    \hspace*{-2cm}
+	\begin{tabular}{|l|l|l|l|l|l|l|l|l|l||l|l|l|l|l|l|}
+ 	\hline
+ 	~ & $s$ & $i$ & $p_{e}$ & $p_{v}$ & $p_{b}$ & $BR$ &$IW$ & $FA$ & $CA$ & $A$ & $A$ & $AM$ & $T$ & $T$ & $T$\\
+ 	\hline
+    1 & 50 & 50 & \textbf{1\%} & 0.5 & 0.5 & 10\% & 10\% & 1.0 & 10\% & 11.1 & 11.5 & 12.5 & -256.0 &-244.6 & -231.0  \\
+	\hline
+    \end{tabular}
+    \caption {Parameter settings experiments}
+    \label{table:parameterSettingsLALLA}
+\end{table}
 
