--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -5,7 +5,7 @@
 
 \begin{sidewaystable}
     \centering
-	\begin{tabular}{|l|l|l|l|l|l|l|l|l|l||l|l|l|l|l|l|}
+	\begin{tabular}{|l|l|l|l|l|l|l|l|l|l||c|c|c|c|c|c|}
  	\hline
  	~ & $s$ & $i$ & $p_{e}$ & $p_{v}$ & $p_{b}$ & $BR$ &$IW$ & $FA$ & $CA$ &  $ATT(min)$ & $ATT(avg)$ & $ATT(max)$ & $T(min)$ & $T(avg)$ & $T(max)$\\
  	\hline
@@ -27,7 +27,7 @@
     \hspace*{-2cm}
 	\begin{tabular}{|l|l|l|l|l|l|l|l|l|l||l|l|l|l|l|l|}
  	\hline
- 	~ & $s$ & $i$ & $p_{e}$ & $p_{v}$ & $p_{b}$ & $BR$ &$IW$ & $FA$ & $CA$ & $A$ & $A$ & $AM$ & $T$ & $T$ & $T$\\
+ 	~ & $s$ & $i$ & $p_{e}$ & $p_{v}$ & $p_{b}$ & $BR$ &$IW$ & $FA$ & $CA$ & $A_1$ & $A_2$ & $A_3$ & $T_1$ & $T_2$ & $T_3$\\
  	\hline
     1 & 50 & 50 & \textbf{1\%} & 0.5 & 0.5 & 10\% & 10\% & 1.0 & 10\% & 11.1 & 11.5 & 12.5 & -256.0 &-244.6 & -231.0  \\
 	\hline
