new files to algorithm

--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -129,14 +129,20 @@
 \input{chapters/relatedWork/relatedWork}
 \input{chapters/relatedWork/structuredLiteratureReview}
 \input{chapters/relatedWork/relatedWorkVol4}
-\input{chapters/model/problemStatement}
+\input{chapters/relatedWork/problemStatement}
 
 \chapter{The Proposed Method}
 \label{theModel}
 \input{chapters/model/model}
 \input{chapters/model/methodDescription}
 \input{chapters/model/objectiveFunction}
-\input{chapters/model/algorithm}
+\input{chapters/model/initialization}
+\input{chapters/model/selectingStartNode}
+\input{chapters/model/selectingNextNode}
+\input{chapters/model/createRouteSet}
+\input{chapters/model/routeSetEvaluation}
+\input{chapters/model/routeSetRepresentation}
+%\input{chapters/model/algorithm}
 
 \chapter{Experiments and Results}
 \label{experimentsAndResults}
