--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -23,16 +23,31 @@
 
 
 \begin{table}
-    
-    \hspace*{-2cm}
+    \tiny
+    \hspace*{-1cm}
 	\begin{tabular}{|l|l|l|l|l|l|l|l|l|l||l|l|l|l|l|l|}
  	\hline
- 	~ & $s$ & $i$ & $p_{e}$ & $p_{v}$ & $p_{b}$ & $BR$ &$IW$ & $FA$ & $CA$ & $A_1$ & $A_2$ & $A_3$ & $T_1$ & $T_2$ & $T_3$\\
+ 	~ & $s$ & $i$ & $p_{e}$ & $p_{v}$ & $p_{b}$ & $BR$ &$IW$ & $FA$ & $CA$ & $A^b$ & $A^a$ & $A^w$ & $T^b$ & $T^a$ & $T^w$\\
  	\hline
     1 & 50 & 50 & \textbf{1\%} & 0.5 & 0.5 & 10\% & 10\% & 1.0 & 10\% & 11.1 & 11.5 & 12.5 & -256.0 &-244.6 & -231.0  \\
-	\hline
+    ~ & 50 & 50 & \textbf{10\%} & 0.5 & 0.5 & 10\% & 10\% & 1.0 & 10\% & 11.1 & 11.6 & 12.8 & -254.0 & -241.0 & -209.0 \\
+    ~ & 50 & 50 & \textbf{50\%} & 0.5 & 0.5 & 10\% & 10\% & 1.0 & 10\% & \textbf{11.1} & \textbf{11.6} & \textbf{12.4} & \textbf{-258.0} & \textbf{-245.6} & \textbf{-235.0}\\
+    ~ & 50 & 50 & \textbf{90\%} & 0.5 & 0.5 & 10\% & 10\% & 1.0 & 10\% &  11.3 & 11.6 & 12.4 & -259.0 & -240.9 & -221.0  \\
+    ~ & 50 & 50 & \textbf{99\%} & 0.5 & 0.5 & 10\% & 10\% & 1.0 & 10\% &  11.2 & 11.6 & 12.2 & -256.0 & -242.4 & -219.0  \\
+    \hline
+    2 & 50 & 50 & 50\% & \textbf{0.01} & \textbf{0.01} & 10\% & 10\% & 1.0 & 10\% & 11.2 & 11.8 & 12.7 & -253.0 & -241.9 & -218.0  \\
+    ~ & 50 & 50 & 50\% & \textbf{0.01} & \textbf{0.01} & 10\% & 10\% & 1.0 & 10\% &  ~ & ~ & ~ & ~ & ~ & ~  \\
+    \hline
     \end{tabular}
-    \caption {Parameter settings experiments}
+    \caption {Parameter settings experiments} 
+    \begin{itemize}[noitemsep]
+    \item[$A^b$:] best $ATT$ value
+    \item[$A^a$:] average $ATT$ value
+    \item[$A^w$:] worst $ATT$ value
+    \item[$T^b$:] best $TOTFIT$ value
+    \item[$T^a$:] average $TOTFIT$ value
+    \item[$T^w$:] worst $TOTFIT$ value
+    \end{itemize}
     \label{table:parameterSettingsLALLA}
 \end{table}
 
