--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -118,7 +118,7 @@
 \chapter{Background and Motivation}
 \label{backgroundAndMotivation}
 \input{chapters/backgroundTheoryAndMotivation/backgroundTheoryAndMotivation}
-\input{chapters/backgroundTheoryAndMotivation/backgroundTheory}
+%\input{chapters/backgroundTheoryAndMotivation/backgroundTheory}
 \input{chapters/backgroundTheoryAndMotivation/vehicleRoutingProblem}
 \input{chapters/backgroundTheoryAndMotivation/swarmIntelligence}
 \input{chapters/backgroundTheoryAndMotivation/graphdatabase}
