--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -36,7 +36,7 @@
     ~ & 50 & 50 & \textbf{99\%} & 0.5 & 0.5 & 10\% & 10\% & 1.0 & 10\% &  11.2 & 11.6 & 12.2 & -256.0 & -242.4 & -219.0  \\
     \hline
     2 & 50 & 50 & 50\% & \textbf{0.01} & \textbf{0.01} & 10\% & 10\% & 1.0 & 10\% & 11.2 & 11.8 & 12.7 & -253.0 & -241.9 & -218.0  \\
-    ~ & 50 & 50 & 50\% & \textbf{0.01} & \textbf{0.01} & 10\% & 10\% & 1.0 & 10\% &  ~ & ~ & ~ & ~ & ~ & ~  \\
+    ~ & 50 & 50 & 50\% & \textbf{0.9} & \textbf{0.9} & 10\% & 10\% & 1.0 & 10\% &  11.0 & 11.4 & 11.9 & -256.0 & -245.0 & -227.0  \\
     \hline
     \end{tabular}
     \caption {Parameter settings experiments} 
