--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -37,6 +37,9 @@
     \hline
     2 & 50 & 50 & 50\% & \textbf{0.01} & \textbf{0.01} & 10\% & 10\% & 1.0 & 10\% & 11.2 & 11.8 & 12.7 & -253.0 & -241.9 & -218.0  \\
     ~ & 50 & 50 & 50\% & \textbf{0.9} & \textbf{0.9} & 10\% & 10\% & 1.0 & 10\% &  11.0 & 11.4 & 11.9 & -256.0 & -245.0 & -227.0  \\
+    ~ & 50 & 50 & 50\% & \textbf{0.01} & \textbf{0.9} & 10\% & 10\% & 1.0 & 10\% &  11.0 & 11.6 & 12.7 & -256.0 & -243.9 & -228.0  \\
+    ~ & 50 & 50 & 50\% & \textbf{0.5} & \textbf{0.5} & 10\% & 10\% & 1.0 & 10\% & 11.1 & 11.6 & 12.4 & -258.0 & -245.6 & -235.0 \\
+    ~ & 50 & 50 & 50\% & \textbf{0.5} & \textbf{0.9} & 10\% & 10\% & 1.0 & 10\% &  ~ & ~ & ~ & ~ & ~ & ~ \\
     \hline
     \end{tabular}
     \caption {Parameter settings experiments} 
