--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -42,7 +42,9 @@
     ~ & 50 & 50 & 50\% & \textbf{0.5} & \textbf{0.9} & 10\% & 10\% & 1.0 & 10\% &  \textbf{10.9} & \textbf{11.4} & \textbf{11.8} & \textbf{-266.0} & \textbf{-250.7} & \textbf{-229.0} \\
     ~ & 50 & 50 & 50\% & \textbf{0.9} & \textbf{0.9} & 10\% & 10\% & 1.0 & 10\% &  11.0 & 11.4 & 11.9 & -256.0 & -245.0 & -227.0  \\
     \hline
-    3 & 50 & 50 & 50\% & 0.5 & 0.9 & 10\% & 10\% & 1.0 & 10\% & ~ & ~ & ~ & ~ & ~ & ~  \\
+    3 & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{1\%} & 10\% & 1.0 & 10\% & 11.1 & 11.6 & 12.3 & -254.0 & -242.7 & -228.0  \\
+    ~ & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{10\%} & 10\% & 1.0 & 10\% &  10.9 & 11.4 & 11.8 & -266.0 & -250.7 & -229.0 \\
+    ~ & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{25\%} & 10\% & 1.0 & 10\% &  ~ & ~ & ~ & ~ & ~ & ~ \\
     \hline
     \end{tabular}
     \caption {Parameter settings experiments} 
