--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -44,6 +44,7 @@
     \hline
     3 & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{1\%} & 10\% & 1.0 & 10\% & 11.1 & 11.6 & 12.3 & -254.0 & -242.7 & -228.0  \\
     ~ & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{10\%} & 10\% & 1.0 & 10\% &  10.9 & 11.4 & 11.8 & -266.0 & -250.7 & -229.0 \\
+    ~ & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{10\%} & 10\% & 1.0 & 10\% &  11.1 & 11.6 & 12.4 & -260.0 & -244.5 & -229.0 \\
     ~ & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{25\%} & 10\% & 1.0 & 10\% &  ~ & ~ & ~ & ~ & ~ & ~ \\
     \hline
     \end{tabular}
