--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -45,7 +45,7 @@
     3 & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{1\%} & 10\% & 1.0 & 10\% & 11.1 & 11.6 & 12.3 & -254.0 & -242.7 & -228.0  \\
     ~ & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{10\%} & 10\% & 1.0 & 10\% &  10.9 & 11.4 & 11.8 & -266.0 & -250.7 & -229.0 \\
     ~ & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{10\%} & 10\% & 1.0 & 10\% &  11.1 & 11.6 & 12.4 & -260.0 & -244.5 & -229.0 \\
-    ~ & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{25\%} & 10\% & 1.0 & 10\% &  ~ & ~ & ~ & ~ & ~ & ~ \\
+    ~ & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{25\%} & 10\% & 1.0 & 10\% &  10.9 & 11.3 & 11.7 & -255.0 & -248.8 & -234.0 \\
     \hline
     \end{tabular}
     \caption {Parameter settings experiments} 
