--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -43,14 +43,14 @@
     ~ & 50 & 50 & 50\% & \textbf{0.9} & \textbf{0.9} & 10\% & 10\% & 1.0 & 10\% &  11.0 & 11.4 & 11.9 & -256.0 & -245.0 & -227.0  \\
     \hline
     3 & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{1\%} & 10\% & 1.0 & 10\% & 11.1 & 11.6 & 12.3 & -254.0 & -242.7 & -228.0  \\
-    ~ & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{10\%} & 10\% & 1.0 & 10\% &  10.9 & 11.4 & 11.8 & -266.0 & -250.7 & -229.0 \\
-    ~ & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{10\%} & 10\% & 1.0 & 10\% &  11.1 & 11.6 & 12.4 & -260.0 & -244.5 & -229.0 \\
+    ~ & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{10\%} & 10\% & 1.0 & 10\% &  \textbf{10.9} & \textbf{11.4} & \textbf{11.8} & \textbf{-266.0} & \textbf{-250.7} & \textbf{-229.0} \\\
     ~ & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{25\%} & 10\% & 1.0 & 10\% &  10.9 & 11.3 & 11.7 & -255.0 & -248.8 & -234.0 \\
     ~ & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{50\%} & 10\% & 1.0 & 10\% &  10.9 & 11.4 & 12.6 & -261.0 & -250.2 & -231.0 \\
-    ~ & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{75\%} & 10\% & 1.0 & 10\% &  ~ & ~ & ~ & ~ & ~ & ~ \\
+    %~ & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{75\%} & 10\% & 1.0 & 10\% &  11.1 & 11.7 & 12.4 & -265.0 & -243.0 & -225.0 \\
     ~ & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{90\%} & 10\% & 1.0 & 10\% &  11.2 & 11.6 & 12.7 & -256.0 & -243.0 & -232.0 \\
     \hline
-    4 & 50 & 50 & 50\% & 0.5 & 0.9 & ~ & \textbf{10\%} & 1.0 & 10\% & ~ & ~ & ~ & ~ & ~ & ~  \\
+    4 & 50 & 50 & 50\% & 0.5 & 0.9 & 10\% & \textbf{1\%} & 1.0 & 10\% & ~ & ~ & ~ & ~ & ~ & ~  \\
+    ~ & 50 & 50 & 50\% & 0.5 & 0.9 & 10\% & \textbf{10\%} & 1.0 & 10\% & 10.9 & 11.4 & 11.8 & -266.0 & -250.7 & -299.0  \\
     \hline
     \end{tabular}
     \caption {Parameter settings experiments} 
