--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -9,12 +9,12 @@
  	\hline
  	~ & $s$ & $i$ & $p_{e}$ & $p_{v}$ & $p_{b}$ & $BR$ &$IW$ & $FA$ & $CA$ &  $ATT(min)$ & $ATT(avg)$ & $ATT(max)$ & $T(min)$ & $T(avg)$ & $T(max)$\\
  	\hline
-    1 & 50 & 50 & \textbf{1\%} & 0.5 & 0.5 & 10\% & 10\% & 1.0 & 10\% & 11.1 & 11.5 & 12.5 & -256.0 &-244.6 & -231.0  \\
-    ~ & 50 & 50 & \textbf{10\%} & 0.5 & 0.5 & 10\% & 10\% & 1.0 & 10\% & 11.1 & 11.6 & 12.8 & -254.0 & -241.0 & -209.0 \\
-    ~ & 50 & 50 & \textbf{50\%} & 0.5 & 0.5 & 10\% & 10\% & 1.0 & 10\% & 11.1 & 11.6 & 12.8 & -254.0 & -246.4 & -225.0\\
-    ~ & 50 & 50 & \textbf{90\%} & 0.5 & 0.5 & 10\% & 10\% & 1.0 & 10\% &  11.3 & 11.6 & 12.4 & -259.0 & -240.9 & -221.0  \\
+    1 & 50 & 50 & \textbf{1\%} & 0.5 & 0.5 & 10\% & 0.1 & 1.0 & 10\% & 11.1 & 11.5 & 12.5 & -256.0 &-244.6 & -231.0  \\
+    ~ & 50 & 50 & \textbf{10\%} & 0.5 & 0.5 & 10\% & 0.1 & 1.0 & 10\% & 11.1 & 11.6 & 12.8 & -254.0 & -241.0 & -209.0 \\
+    ~ & 50 & 50 & \textbf{50\%} & 0.5 & 0.5 & 10\% & 0.1 & 1.0 & 10\% & 11.1 & 11.6 & 12.8 & -254.0 & -246.4 & -225.0\\
+    ~ & 50 & 50 & \textbf{90\%} & 0.5 & 0.5 & 10\% & 0.1 & 1.0 & 10\% &  11.3 & 11.6 & 12.4 & -259.0 & -240.9 & -221.0  \\
     \hline
-    2 & 50 & 50 & 90\% & \textbf{0.5} & 0.5 & 10\% & 10\% & 1.0 & 10\% &  ~ & ~ & ~ & ~ & ~ & ~  \\
+    2 & 50 & 50 & 90\% & \textbf{0.5} & 0.5 & 10\% & 0.1 & 1.0 & 10\% &  ~ & ~ & ~ & ~ & ~ & ~  \\
 	\hline
     \end{tabular}
     \caption {Parameter settings experiments}
@@ -29,28 +29,30 @@
  	\hline
  	~ & $s$ & $i$ & $p_{e}$ & $p_{v}$ & $p_{b}$ & $BR$ &$IW$ & $FA$ & $CA$ & $A^b$ & $A^a$ & $A^w$ & $T^b$ & $T^a$ & $T^w$\\
  	\hline
-    1 & 50 & 50 & \textbf{1\%} & 0.5 & 0.5 & 10\% & 10\% & 1.0 & 10\% & 11.1 & 11.5 & 12.5 & -256.0 &-244.6 & -231.0  \\
-    ~ & 50 & 50 & \textbf{10\%} & 0.5 & 0.5 & 10\% & 10\% & 1.0 & 10\% & 11.1 & 11.6 & 12.8 & -254.0 & -241.0 & -209.0 \\
-    ~ & 50 & 50 & \textbf{50\%} & 0.5 & 0.5 & 10\% & 10\% & 1.0 & 10\% & \textbf{11.1} & \textbf{11.6} & \textbf{12.4} & \textbf{-258.0} & \textbf{-245.6} & \textbf{-235.0}\\
-    ~ & 50 & 50 & \textbf{90\%} & 0.5 & 0.5 & 10\% & 10\% & 1.0 & 10\% &  11.3 & 11.6 & 12.4 & -259.0 & -240.9 & -221.0  \\
-    ~ & 50 & 50 & \textbf{99\%} & 0.5 & 0.5 & 10\% & 10\% & 1.0 & 10\% &  11.2 & 11.6 & 12.2 & -256.0 & -242.4 & -219.0  \\
+    1 & 50 & 50 & \textbf{1\%} & 0.5 & 0.5 & 10\% & 0.1 & 10\% & 10\% & 11.1 & 11.5 & 12.5 & -256.0 &-244.6 & -231.0  \\
+    ~ & 50 & 50 & \textbf{10\%} & 0.5 & 0.5 & 10\% & 0.1 & 10\% & 10\% & 11.1 & 11.6 & 12.8 & -254.0 & -241.0 & -209.0 \\
+    ~ & 50 & 50 & \textbf{50\%} & 0.5 & 0.5 & 10\% & 0.1 & 10\% & 10\% & \textbf{11.1} & \textbf{11.6} & \textbf{12.4} & \textbf{-258.0} & \textbf{-245.6} & \textbf{-235.0}\\
+    ~ & 50 & 50 & \textbf{90\%} & 0.5 & 0.5 & 10\% & 0.1 & 10\% & 10\% &  11.3 & 11.6 & 12.4 & -259.0 & -240.9 & -221.0  \\
+    ~ & 50 & 50 & \textbf{99\%} & 0.5 & 0.5 & 10\% & 0.1 & 10\% & 10\% &  11.2 & 11.6 & 12.2 & -256.0 & -242.4 & -219.0  \\
     \hline
-    2 & 50 & 50 & 50\% & \textbf{0.01} & \textbf{0.01} & 10\% & 10\% & 1.0 & 10\% & 11.2 & 11.8 & 12.7 & -253.0 & -241.9 & -218.0  \\
-    ~ & 50 & 50 & 50\% & \textbf{0.01} & \textbf{0.9} & 10\% & 10\% & 1.0 & 10\% &  11.0 & 11.6 & 12.7 & -256.0 & -243.9 & -228.0  \\
-    ~ & 50 & 50 & 50\% & \textbf{0.5} & \textbf{0.5} & 10\% & 10\% & 1.0 & 10\% & 11.1 & 11.6 & 12.4 & -258.0 & -245.6 & -235.0 \\
-    ~ & 50 & 50 & 50\% & \textbf{0.5} & \textbf{0.7} & 10\% & 10\% & 1.0 & 10\% &  11.0 & 11.4 & 12.4 & -260.0 & -246.7 & -231.0 \\
-    ~ & 50 & 50 & 50\% & \textbf{0.5} & \textbf{0.9} & 10\% & 10\% & 1.0 & 10\% &  \textbf{10.9} & \textbf{11.4} & \textbf{11.8} & \textbf{-266.0} & \textbf{-250.7} & \textbf{-229.0} \\
-    ~ & 50 & 50 & 50\% & \textbf{0.9} & \textbf{0.9} & 10\% & 10\% & 1.0 & 10\% &  11.0 & 11.4 & 11.9 & -256.0 & -245.0 & -227.0  \\
+    2 & 50 & 50 & 50\% & \textbf{0.01} & \textbf{0.01} & 10\% & 0.1 & 10\% & 10\% & 11.2 & 11.8 & 12.7 & -253.0 & -241.9 & -218.0  \\
+    ~ & 50 & 50 & 50\% & \textbf{0.01} & \textbf{0.9} & 10\% & 0.1 & 10\% & 10\% &  11.0 & 11.6 & 12.7 & -256.0 & -243.9 & -228.0  \\
+    ~ & 50 & 50 & 50\% & \textbf{0.5} & \textbf{0.5} & 10\% & 0.1 & 10\%& 10\% & 11.1 & 11.6 & 12.4 & -258.0 & -245.6 & -235.0 \\
+    ~ & 50 & 50 & 50\% & \textbf{0.5} & \textbf{0.7} & 10\% & 0.1 & 10\% & 10\% &  11.0 & 11.4 & 12.4 & -260.0 & -246.7 & -231.0 \\
+    ~ & 50 & 50 & 50\% & \textbf{0.5} & \textbf{0.9} & 10\% & 0.1 & 10\% & 10\% &  \textbf{10.9} & \textbf{11.4} & \textbf{11.8} & \textbf{-266.0} & \textbf{-250.7} & \textbf{-229.0} \\
+    ~ & 50 & 50 & 50\% & \textbf{0.9} & \textbf{0.9} & 10\% & 0.1 & 10\% & 10\% &  11.0 & 11.4 & 11.9 & -256.0 & -245.0 & -227.0  \\
     \hline
-    3 & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{1\%} & 10\% & 1.0 & 10\% & 11.1 & 11.6 & 12.3 & -254.0 & -242.7 & -228.0  \\
-    ~ & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{10\%} & 10\% & 1.0 & 10\% &  \textbf{10.9} & \textbf{11.4} & \textbf{11.8} & \textbf{-266.0} & \textbf{-250.7} & \textbf{-229.0} \\\
-    ~ & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{25\%} & 10\% & 1.0 & 10\% &  10.9 & 11.3 & 11.7 & -255.0 & -248.8 & -234.0 \\
-    ~ & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{50\%} & 10\% & 1.0 & 10\% &  10.9 & 11.4 & 12.6 & -261.0 & -250.2 & -231.0 \\
+    3 & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{1\%} & 0.1 & 10\% & 10\% & 11.1 & 11.6 & 12.3 & -254.0 & -242.7 & -228.0  \\
+    ~ & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{10\%} & 0.1 & 10\% & 10\% &  \textbf{10.9} & \textbf{11.4} & \textbf{11.8} & \textbf{-266.0} & \textbf{-250.7} & \textbf{-229.0} \\\
+    ~ & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{25\%} & 0.1 & 10\% & 10\% &  10.9 & 11.3 & 11.7 & -255.0 & -248.8 & -234.0 \\
+    ~ & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{50\%} & 0.1 & 10\% & 10\% &  10.9 & 11.4 & 12.6 & -261.0 & -250.2 & -231.0 \\
     %~ & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{75\%} & 10\% & 1.0 & 10\% &  11.1 & 11.7 & 12.4 & -265.0 & -243.0 & -225.0 \\
-    ~ & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{90\%} & 10\% & 1.0 & 10\% &  11.2 & 11.6 & 12.7 & -256.0 & -243.0 & -232.0 \\
+    ~ & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{90\%} & 0.1 & 10\% & 10\% &  11.2 & 11.6 & 12.7 & -256.0 & -243.0 & -232.0 \\
     \hline
-    4 & 50 & 50 & 50\% & 0.5 & 0.9 & 10\% & \textbf{1\%} & 1.0 & 10\% & ~ & ~ & ~ & ~ & ~ & ~  \\
-    ~ & 50 & 50 & 50\% & 0.5 & 0.9 & 10\% & \textbf{10\%} & 1.0 & 10\% & 10.9 & 11.4 & 11.8 & -266.0 & -250.7 & -299.0  \\
+    4 & 50 & 50 & 50\% & 0.5 & 0.9 & 10\% & \textbf{0.1} & 10\% & 10\% & 10.9 & 11.4 & 11.8 & -266.0 & -250.7 & -299.0  \\
+    ~ & 50 & 50 & 50\% & 0.5 & 0.9 & 10\% & \textbf{0.5} & 10\% & 10\% & 10.8 & 11.6 & 12.1 & -263.0 & -246.0 & -236.0  \\
+    ~ & 50 & 50 & 50\% & 0.5 & 0.9 & 10\% & \textbf{1.0} & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~  \\
+    ~ & 50 & 50 & 50\% & 0.5 & 0.9 & 10\% & \textbf{2.0} & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~  \\
     \hline
     \end{tabular}
     \caption {Parameter settings experiments} 
