--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -70,9 +70,10 @@
     ~ & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{90\%} & 0.1 & 10\% & 10\% &  11.2 & 11.6 & 12.7 & -256.0 & -243.0 & -232.0 \\
     \hline
     4 & 50 & 50 & 50\% & 0.5 & 0.9 & 10\% & \textbf{0.1} & 10\% & 10\% & 10.9 & 11.4 & 11.8 & -266.0 & -250.7 & -299.0  \\
+    ~ & 50 & 50 & 50\% & 0.5 & 0.9 & 10\% & \textbf{0.3} & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
     ~ & 50 & 50 & 50\% & 0.5 & 0.9 & 10\% & \textbf{0.5} & 10\% & 10\% & 10.8 & 11.6 & 12.1 & -263.0 & -246.0 & -236.0  \\
     ~ & 50 & 50 & 50\% & 0.5 & 0.9 & 10\% & \textbf{1.0} & 10\% & 10\% & 11.0 & 11.4 & 11.8 & -259.0 & -243.0 & -231.0  \\
-    ~ & 50 & 50 & 50\% & 0.5 & 0.9 & 10\% & \textbf{2.0} & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~  \\
+    ~ & 50 & 50 & 50\% & 0.5 & 0.9 & 10\% & \textbf{2.0} & 10\% & 10\% & 11.1 & 11.5 & 12.6 & -255.0 & -243.7 & -222.0  \\
     \hline
     \end{tabular}
     \caption {Parameter settings experiments} 
