--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -51,10 +51,15 @@
  	~ & $s$ & $i$ & $p_{e}$ & $p_{v}$ & $p_{b}$ & $BR$ & $FA$ & $CA$ & $A^b$ & $A^a$ & $A^w$ & $T^b$ & $T^a$ & $T^w$\\
  	\hline
     1 & 50 & 50 & \textbf{1\%} & 0.5 & 0.5 & 10\% & 10\% & 10\% & 10.9 & 11.2 & 11.5 & -256.0 & -250.9 & -241.0  \\
-    ~ & 50 & 50 & \textbf{10\%} & 0.5 & 0.5 & 10\% & 10\% & 10\% & 10.9 & 11.2 & 11-5 & -261.0 & -251.1 & -243.0  \\
-    ~ & 50 & 50 & \textbf{50\%} & 0.5 & 0.5 & 10\% & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~  \\
-    ~ & 50 & 50 & \textbf{90\%} & 0.5 & 0.5 & 10\% & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~  \\
-    ~ & 50 & 50 & \textbf{99\%} & 0.5 & 0.5 & 10\% & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~  \\
+    ~ & 50 & 50 & \textbf{10\%} & 0.5 & 0.5 & 10\% & 10\% & 10\% & \textbf{10.9} & \textbf{11.2} & \textbf{11.5} & \textbf{-261.0} & \textbf{-251.1} & \textbf{-243.0} \\
+    ~ & 50 & 50 & \textbf{50\%} & 0.5 & 0.5 & 10\% & 10\% & 10\% & 10.7 & 11.2 & 11.7 & -265.0 & -247.4 & -235.0  \\
+    ~ & 50 & 50 & \textbf{90\%} & 0.5 & 0.5 & 10\% & 10\% & 10\% & 11.1 & 11.5 & 12.2 & -257.0 & -245.5 & -238.0  \\
+    ~ & 50 & 50 & \textbf{99\%} & 0.5 & 0.5 & 10\% & 10\% & 10\% & 11.0 & 11.2 & 11.6 & -250 & -24.2 & -239.0  \\
+     \hline
+    2 & 50 & 50 & 10\% & \textbf{0.1} & \textbf{0.5} & 10\% & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
+    ~ & 50 & 50 & 10\% & \textbf{0.5} & \textbf{0.5} & 10\% & 10\% & 10\% & 10.9 & 11.2 & 11.5 & -261.0 & -251.1 & -243.0 \\
+    ~ & 50 & 50 & 10\% & \textbf{0.5} & \textbf{0.9} & 10\% & 10\% & 10\% & 11.0 & 11.4 & 11.9 & -255.0 & -244.7 & -237.0 \\
+
     \hline
     \end{tabular}
     \caption {Parameter settings experiments vol 2} 
