--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -26,7 +26,7 @@
 \usepackage{tabto}
 \usepackage[figuresright]{rotating} %For rotating tables
 \setcitestyle{square}
-
+\newcommand{\pluseq}{\mathrel{+}=}
 
 % spacing: how to read {12pt plus 4pt minus 2pt}
 %           12pt is what we would like the spacing to be
