--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -55,12 +55,16 @@
     ~ & 50 & 50 & \textbf{50\%} & 0.5 & 0.5 & 10\% & 10\% & 10\% & 10.7 & 11.2 & 11.7 & -265.0 & -247.4 & -235.0  \\
     ~ & 50 & 50 & \textbf{90\%} & 0.5 & 0.5 & 10\% & 10\% & 10\% & 11.1 & 11.5 & 12.2 & -257.0 & -245.5 & -238.0  \\
     ~ & 50 & 50 & \textbf{99\%} & 0.5 & 0.5 & 10\% & 10\% & 10\% & 11.0 & 11.2 & 11.6 & -250 & -24.2 & -239.0  \\
-     \hline
-    2 & 50 & 50 & 10\% & \textbf{0.01} & \textbf{0.1} & 10\% & 10\% & 10\% & 10.7 & 11.2 & 11.9 & -259.0 & -252.4 & -245.0 \\
+    \hline
+    2 & 50 & 50 & 10\% & \textbf{0.01} & \textbf{0.05} & 10\% & 10\% & 10\% & 10.9 & 11.3 & 11.6 & -251.0 & -243.7 & -235.0 \\
+    ~ & 50 & 50 & 10\% & \textbf{0.01} & \textbf{0.1} & 10\% & 10\% & 10\% & \textbf{10.7} & \textbf{11.2} & \textbf{11.9} & \textbf{-259.0} & \textbf{-252.4} & \textbf{-245.0} \\
     ~ & 50 & 50 & 10\% & \textbf{0.1} & \textbf{0.5} & 10\% & 10\% & 10\% & 11.0 & 11.2 & 11.7 & -261.0 & -248.0 & -235.0 \\
     ~ & 50 & 50 & 10\% & \textbf{0.5} & \textbf{0.5} & 10\% & 10\% & 10\% & 10.9 & 11.2 & 11.5 & -261.0 & -251.1 & -243.0 \\
     ~ & 50 & 50 & 10\% & \textbf{0.5} & \textbf{0.9} & 10\% & 10\% & 10\% & 11.0 & 11.4 & 11.9 & -255.0 & -244.7 & -237.0 \\
-    ~ & 50 & 50 & 10\% & \textbf{0.9} & \textbf{0.9} & 10\% & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
+    ~ & 50 & 50 & 10\% & \textbf{0.9} & \textbf{0.9} & 10\% & 10\% & 10\% & 11.0 & 11.3 & 11.9 & -261.0 & -248.1 & -230.0 \\
+    \hline
+    3 & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{1\%} & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{10\%} & 10\% & 10\% & 10.7 & 11.2 & 11.9 & -259.0 & -252.4 & -245.0 \\
     \hline
     \end{tabular}
     \caption {Parameter settings experiments vol 2} 
