SelectingNextNode finished, ready for creating route set

--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -23,6 +23,7 @@
 \usepackage[usenames,dvipsnames]{xcolor}
 \usepackage{float}
 \usepackage{enumitem}
+\usepackage{varioref}
 \usepackage{tabto}
 \usepackage{enumitem} % For abbrecations
 \newlist{abbrv}{itemize}{1}
