results, rw fix, tables and figures fix

--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -37,8 +37,9 @@
     ~ & 50 & 50 & 50\% & 0.5 & 0.9 & 10\% & \textbf{2.0} & 10\% & 10\% & 11.1 & 11.5 & 12.6 & -255.0 & -243.7 & -222.0  \\
     \hline
     \end{tabular}
-    \caption {Parameter settings experiments vol 1}
-    \label{table:parameterSettings}
+    \caption {Parameter settings experiment vol 1 not used}
+
+    \label{table:pmsNotUsed}
 \end{sidewaystable}
 
 
@@ -65,12 +66,12 @@
     \hline
     3 & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{1\%} & 10\% & 10\% & 11.1 & 11.3 & 11.5 & -254.0 & -247.3 & -243.0 \\
     ~ & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{10\%} & 10\% & 10\% & 10.7 & 11.2 & 11.9 & -259.0 & -252.4 & -245.0 \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{25\%} & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{25\%} & 10\% & 10\% & 10.8 & 11.2 & 11.6 & -263.0 & -250.4 & -245.0 \\
     ~ & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{50\%} & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
     ~ & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{90\%} & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
     \hline
     \end{tabular}
-    \caption {Parameter settings experiments vol 2} 
+    \caption {Steps and results from the parameter settings experiment} 
     \begin{itemize}[noitemsep]
     \item[$A^b$:] best $ATT$ value
     \item[$A^a$:] average $ATT$ value
@@ -79,6 +80,6 @@
     \item[$T^a$:] average $TOTFIT$ value
     \item[$T^w$:] worst $TOTFIT$ value
     \end{itemize}
-    \label{table:parameterSettingsLALLA}
+    \label{table:parameterSettings}
 \end{table}
 
