--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -67,7 +67,7 @@
     3 & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{1\%} & 10\% & 10\% & 11.1 & 11.3 & 11.5 & -254.0 & -247.3 & -243.0 \\
     ~ & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{10\%} & 10\% & 10\% & 10.7 & 11.2 & 11.9 & -259.0 & -252.4 & -245.0 \\
     ~ & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{25\%} & 10\% & 10\% & 10.8 & 11.2 & 11.6 & -263.0 & -250.4 & -245.0 \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{50\%} & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{50\%} & 10\% & 10\% & 11.0 & 11.3 & 11.6 & -256.0 & -247.8 & -35.0 \\
     ~ & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{90\%} & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
     \hline
     \end{tabular}
