added generating ants

--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -141,6 +141,7 @@
 \input{chapters/model/methodDescription}
 \input{chapters/model/algorithmAssessments}
 \input{chapters/model/initialization}
+\input{chapters/model/generatingAnts}
 \input{chapters/model/selectingStartNode}
 \input{chapters/model/selectingNextNode}
 \input{chapters/model/createRouteSet}
