--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -70,7 +70,7 @@
     ~ & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{50\%} & 10\% & 10\% & 11.0 & 11.3 & 11.6 & -256.0 & -247.8 & -35.0 \\
     ~ & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{90\%} & 10\% & 10\% & 11.1 & 11.4 & 11.7 & -257.0 & -248.6 & -240.0 \\
     \hline
-    4 & 50 & 50 & 10\% & 0.01 & 0.1 & 25\% & \textbf{1\%} & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
+    4 & 50 & 50 & 10\% & 0.01 & 0.1 & 25\% & \textbf{1\%} & 10\% & 11.0 & 11.3 & 11.7 & -258.0 & -247.5 & -238.0 \\
     ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 25\% & \textbf{10\%} & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
     ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 25\% & \textbf{50\%} & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
     ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 25\% & \textbf{90\%} & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
