--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -65,15 +65,22 @@
     ~ & 50 & 50 & 10\% & \textbf{0.9} & \textbf{0.9} & 10\% & 10\% & 10\% & 11.0 & 11.3 & 11.9 & -261.0 & -248.1 & -230.0 \\
     \hline
     3 & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{1\%} & 10\% & 10\% & 11.1 & 11.3 & 11.5 & -254.0 & -247.3 & -243.0 \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{10\%} & 10\% & 10\% & 10.7 & 11.2 & 11.9 & -259.0 & -252.4 & -245.0 \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{25\%$^*$} & 10\% & 10\% & 10.8 & 11.2 & 11.6 & -263.0 & -250.4 & -245.0 \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{10\%} & 10\% & 10\% & \textbf{10.7} & \textbf{11.2} & \textbf{11.9} & \textbf{-259.0} & \textbf{-252.4} & \textbf{-245.0} \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{25\%} & 10\% & 10\% & 10.8 & 11.2 & 11.6 & -263.0 & -250.4 & -245.0 \\
     ~ & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{50\%} & 10\% & 10\% & 11.0 & 11.3 & 11.6 & -256.0 & -247.8 & -35.0 \\
     ~ & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{90\%} & 10\% & 10\% & 11.1 & 11.4 & 11.7 & -257.0 & -248.6 & -240.0 \\
     \hline
-    4 & 50 & 50 & 10\% & 0.01 & 0.1 & 25\% & \textbf{1\%} & 10\% & 11.0 & 11.3 & 11.7 & -258.0 & -247.5 & -238.0 \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 25\% & \textbf{10\%} & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 25\% & \textbf{50\%} & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 25\% & \textbf{90\%} & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
+    4 & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{1\%} & 10.8 & 11.3 & 11.6 & -258.0 & -249.1 & -241.0 \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{10\%} & 10.7 & 11.2 & 11.9 & -259.0 & -252.4 & -245.0 \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{25\%} & ~ & ~ & ~ & ~ & ~ & ~ \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{50\%} & ~ & ~ & ~ & ~ & ~ & ~ \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{90\%} & ~ & ~ & ~ & ~ & ~ & ~ \\
+    \hline
+    5 & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{1\%} & ~ & ~ & ~ & ~ & ~ & ~ & ~ \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{5\%} & ~ & ~ & ~ & ~ & ~ & ~ & ~ \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{10\%} & ~ & ~ & ~ & ~ & ~ & ~ & ~ \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{25\%} & ~ & ~ & ~ & ~ & ~ & ~ & ~ \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{50\%} & ~ & ~ & ~ & ~ & ~ & ~ & ~ \\
     \hline
     \end{tabular}
     \caption {Steps and results from the parameter settings experiment} 
@@ -81,10 +88,9 @@
     \item[$A^b$:] best $ATT$ value
     \item[$A^a$:] average $ATT$ value
     \item[$A^w$:] worst $ATT$ value
-    \item[$T^b$:] best $TOTFIT$ value
+    \item[$T^b$:] best $TOTFIT$ value (best possible $TOTFIT$ value: -315)
     \item[$T^a$:] average $TOTFIT$ value
     \item[$T^w$:] worst $TOTFIT$ value
-    \item[$^*$] $BR$ value of 25\% had a less average $TOTFIT$ value than 10\%, but because of less variation in best and worst values for both the $ATT$ and $TOTFIT$ values, this is selected as the final parameter.
     \end{itemize}
     \label{table:parameterSettings}
 \end{table}
