--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -78,10 +78,10 @@
     ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{17\%} & ~ & ~ & ~ & ~ & ~ & ~ \\
     ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{25\%} & 10.9 & 11.4 & 11.7 & -257.0 & -246.0 & -239.0 \\
     ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{50\%} & 11.1 & 11.4 & 11.7 & -255.0 & -242.6 & -233.0 \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{75\%} &  ~ &  ~ &  ~ &  ~ &  ~ &  ~ \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{75\%} & 11.2 & 11.4 & 11.8 & -258.0 & -245.4 & -237.0 \\
     ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{90\%} & 11.1 & 11.5 & 11.8 & -252.0 & -241.8 & -235.0 \\
     ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{95\%} & ~ & ~ & ~ & ~ & ~ & ~ \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{100\%} & $x^*$ & $x^*$ & $x^*$ & $x^*$ & $x^*$ & $x^*$ \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{100\%$^*$} & - & - & - & - & - & - \\
     \hline
     5 & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{1\%} & ~ & ~ & ~ & ~ & ~ & ~ & ~ \\
     ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{5\%} & ~ & ~ & ~ & ~ & ~ & ~ & ~ \\
@@ -90,7 +90,7 @@
     ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{50\%} & ~ & ~ & ~ & ~ & ~ & ~ & ~ \\
     \hline
     \end{tabular}
-    \caption {Steps and results from the parameter settings experiment} 
+    \caption {Steps with the corresponding results from the parameter settings experiment} 
     \begin{itemize}[noitemsep]
     \item[$A^b$:] best $ATT$ value
     \item[$A^a$:] average $ATT$ value
@@ -98,7 +98,7 @@
     \item[$T^b$:] best $TOTFIT$ value (best possible $TOTFIT$ value: -315)
     \item[$T^a$:] average $TOTFIT$ value
     \item[$T^w$:] worst $TOTFIT$ value
-    \item[$x^*$:] No ants satisfied the initial demands, \emph{\color{red} initial demands: }
+    \item[$^*$:] No ants satisfied the initial demands, \emph{\color{red} initial demands: }
     \end{itemize}
     \label{table:parameterSettings}
 \end{table}
