--- a/thesis/appendices/protocol/finalprotocol.tex
+++ b/thesis/appendices/protocol/finalprotocol.tex
@@ -26,7 +26,7 @@
 \end{table}
 
 \section{Search Terms}
-
+\label{sec:searchTerms}
 \begin{itemize}
 
 \item Group 1: Train, plane, bus, delivery
@@ -52,6 +52,7 @@
 
 
 \section{Research Questions}
+\label{sec:researchQSLR}
 To conduct a structured literature review it is vital to decide the problem to be solved, referred to as P, and the constraints used to guide the search, referred to as C.
 \newline
 \newline
@@ -98,6 +99,7 @@ One of the goals for the environment package for transportation in Trondheim, ``
 %Todo: Skrive om Zotero
 
 \section{Inclusion Criteria}
+\label{sec:inclusionCriteria}
 To exclude irrelevant literature, some inclusion criterias were decided to ensure a level of relevance to the very first pool. First of all, duplicate literature, book of chapters, book of abstracts, book of references, literature not written in english, books, and literature with cleary irrelevant titles (for example literature from different research areas) were removed based on title. After that, we decided to filter out relevant literature based on the abstracts. Because we had relatively many sources to related literature after the initial filtering (367), we decided that we wanted the abstracts (or the keyword section) to explicitly mention swarm intelligence or algorithms associated with swarm intelligence, while it also described a problem connected to vehicle routing. For our literature review we decided to use the inclusion criterias solely on the title, abstract and keywords. After a discussion and reading a few abstracts we landed on the following inclusion criterias:
 \begin{itemize}
 \item The main concern is route optimization focusing on vehicles. 
