results CA finished

--- a/thesis/appendices/protocol/finalprotocol.tex
+++ b/thesis/appendices/protocol/finalprotocol.tex
@@ -67,7 +67,7 @@ One of the goals for the environment package for transportation in Trondheim, ``
     \end{enumerate}
 \end{itemize}
 
-\textbf{This gives us the following research questions:}
+\textbf{Drawn to the following research questions:}
 %\begin{enumerate}
 %\item What are the existing solutions to this problem?
 %\item Which swarm intelligence methods is best suited for optimizing? 
@@ -86,9 +86,9 @@ One of the goals for the environment package for transportation in Trondheim, ``
 \item
     \begin{enumerate}
     \item Is it efficient to combine attributes from different swarm intelligence-methods to solve the vehicle routing problem?
+    \item How does the parameter settings affect the solution quality of the algorithm?
     \item Is it possible to apply our algorithm to optimize bus routes in urban cities?
     \end{enumerate}
-
 \item
     \begin{enumerate}
     \item What are the potential advantages and disadvantages of using a graph database in our implementation?
