--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -2,7 +2,6 @@
 \label{appendixC}
 
 \section{Parameter Setting}
-
 %VOL 1 testing:
 \begin{sidewaystable}
     \centering
@@ -42,7 +41,6 @@
     \label{table:pmsNotUsed}
 \end{sidewaystable}
 
-
 %TINY TABLE, VOL 2 TESTER:
 \begin{table}
     \tiny
@@ -73,20 +71,23 @@
     4 & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{0\%} & 10.9 & 11.3 & 11.6 & -257.0 & -249.3 & -236.0 \\
     ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{1\%} & 10.8 & 11.3 & 11.6 & -258.0 & -249.1 & -241.0 \\
     ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{5\%} &  10.9 & 11.2 & 11.7 & -260.0 & -251.0 & -234.0 \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{7\%} & ~ & ~ & ~ & ~ & ~ & ~ \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{10\%} & 10.7 & 11.2 & 11.9 & -259.0 & -252.4 & -245.0 \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{17\%} & 11.0 & 11.5 & 11.8 & -250.0 & -245.0 & -237.0 \\
+    %~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{7\%} & 10.9 & 11.3 & 11.7 & -256.0 & -247.2 & -239.0 \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{10\%} & \textbf{10.7} & \textbf{11.2} & \textbf{11.9} & \textbf{-259.0} & \textbf{-252.4} & \textbf{-245.0} \\
+    %~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{12\%} & 10.9 & 11.2 & 11.5 & -256.6 & -248.6 & -239.0 \\
+    %~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{17\%} & 11.0 & 11.5 & 11.8 & -250.0 & -245.0 & -237.0 \\
     ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{25\%} & 10.9 & 11.4 & 11.7 & -257.0 & -246.0 & -239.0 \\
     ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{50\%} & 11.1 & 11.4 & 11.7 & -255.0 & -242.6 & -233.0 \\
     ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{75\%} & 11.2 & 11.4 & 11.8 & -258.0 & -245.4 & -237.0 \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{90\%} & 11.1 & 11.5 & 11.8 & -252.0 & -241.8 & -235.0 \\
+    %~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{90\%} & 11.1 & 11.5 & 11.8 & -252.0 & -241.8 & -235.0 \\
     ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{100\%$^*$} & - & - & - & - & - & - \\
     \hline
-    5 & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{1\%} & ~ & ~ & ~ & ~ & ~ & ~ & ~ \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{5\%} & ~ & ~ & ~ & ~ & ~ & ~ & ~ \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{10\%} & ~ & ~ & ~ & ~ & ~ & ~ & ~ \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{25\%} & ~ & ~ & ~ & ~ & ~ & ~ & ~ \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{50\%} & ~ & ~ & ~ & ~ & ~ & ~ & ~ \\
+    5 & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{0\%} & 10\% & 10.9 & 11.3 & 11.8 & -257.0 & -248.5 & -240.0 \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{1\%} & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{5\%} & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{10\%} & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{25\%} & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{50\%} & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{100\%} & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
     \hline
     \end{tabular}
     \caption {Steps with the corresponding results from the parameter settings experiment} 
