--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -82,12 +82,22 @@
     ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{100\%$^*$} & - & - & - & - & - & - \\
     \hline
     5 & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{0\%} & 10\% & 10.9 & 11.3 & 11.8 & -257.0 & -248.5 & -240.0 \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{1\%} & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
+    %~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{1\%} & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
     ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{5\%} & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{10\%} & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{25\%} & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{50\%} & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{100\%} & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{10\%} & 10\% & 10.7 & 11.2 & 11.9 & -259.0 & -252.4 & -245.0 \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{25\%} & 10\% & 11.0 & 11.4 & 11.7 & -260.0 & -243.6 & -238.0 \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{50\%} & 10\% & 11.1 & 11.4 & 11.7 & -260.0 & -250.3 & -240.0 \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{90\%} & 10\% & 11.0 & 11.3 & 11.5 & -255.0 & -244.0 & -229.0 \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{75\%} & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{100\%} & 10\% & 11.0 & 11.3 & 11.7 & -257.0 & -250.3 & -240.0 \\
+    \hline
+    6 & \textbf{10} & 50 & 10\% & 0.01 & 0.1 & 10\% & ~ & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
+    ~ & \textbf{50} & 50 & 10\% & 0.01 & 0.1 & 10\% & ~ & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
+    ~ & \textbf{100} & 50 & 10\% & 0.01 & 0.1 & 10\% & ~ & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
+    ~ & \textbf{150} & 50 & 10\% & 0.01 & 0.1 & 10\% & ~ & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
+    ~ & \textbf{200} & 50 & 10\% & 0.01 & 0.1 & 10\% & ~ & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
+    \hline
+    7 & ~ & \textbf{50} & 10\% & 0.01 & 0.1 & 10\% & ~ & 10\% & ~ & ~ & ~ & ~ & ~ & ~  \\
     \hline
     \end{tabular}
     \caption {Steps with the corresponding results from the parameter settings experiment} 
