results results results#

--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -44,7 +44,7 @@
 %TINY TABLE, VOL 2 TESTER:
 \begin{table}
     \tiny
-    \hspace*{-1cm}
+    \hspace*{-1.5cm}
 	\begin{tabular}{|l|l|l|l|l|l|l|l|l||l|l|l|l|l|l|}
  	\hline
  	~ & $s$ & $i$ & $p_{e}$ & $p_{v}$ & $p_{b}$ & $BR$ & $FA$ & $CA$ & $A^b$ & $A^a$ & $A^w$ & $T^b$ & $T^a$ & $T^w$\\
@@ -88,8 +88,12 @@
     ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{25\%} & 10\% & 11.0 & 11.4 & 11.7 & -260.0 & -243.6 & -238.0 \\
     ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{50\%} & 10\% & 11.1 & 11.4 & 11.7 & -260.0 & -250.3 & -240.0 \\
     ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{90\%} & 10\% & 11.0 & 11.3 & 11.5 & -255.0 & -244.0 & -229.0 \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{75\%} & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{75\%} & 10\% & 11.2 & 11.5 & 12.0 & -260.0 & -243.9 & -234.0 \\
     ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{100\%} & 10\% & 11.0 & 11.3 & 11.7 & -257.0 & -250.3 & -240.0 \\
+    \hline
+    Bonus round$^i$ 1& 50 & 50 & \textbf{1\%} & \textbf{0.5} & \textbf{0.5} & \textbf{25\%} & \textbf{50\%} & \textbf{5\%} & 10.9 & 11.3 & 11.5 & -250.0 & -245.6 & -237.0 \\
+     Bonus round$^i$ 2& 50 & 50 & \textbf{10\%} & \textbf{0.01} & \textbf{0.25} & \textbf{25\%} & \textbf{50\%} & \textbf{5\%} & ~ & ~ & ~ & ~ & ~ & ~ \\
+
     \hline
     6 & \textbf{10} & 50 & 10\% & 0.01 & 0.1 & 10\% & ~ & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
     ~ & \textbf{50} & 50 & 10\% & 0.01 & 0.1 & 10\% & ~ & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
@@ -109,6 +113,7 @@
     \item[$T^a$:] average $TOTFIT$ value
     \item[$T^w$:] worst $TOTFIT$ value
     \item[$^*$:] No ants satisfied the initial demands, \emph{\color{red} initial demands: }
+    \item[$^i$:] Testing values that gave next best results
     \end{itemize}
     \label{table:parameterSettings}
 \end{table}
