--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -149,9 +149,16 @@
     ~ & \textbf{50} & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 10.7 & 11.2 & 11.9 & -259.0 & -252.4 & -245.0 \\
     ~ & \textbf{100} & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 11.0 & 11.3 & 11.4 & -249.4 & -249.4 & -245.0 \\
     ~ & \textbf{150} & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 10.7 & 11.2 & 11.6 & -261.0 & -252.4 & -242.0 \\
-    ~ & \textbf{200} & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
+    ~ & \textbf{200} & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 10.9 & 11.2 & 11.4 & -263.0 & -253.6 & -246.0 \\
     \hline
-    7 & ~ & \textbf{50} & 10\% & 0.01 & 0.1 & 10\% & ~ & 10\% & ~ & ~ & ~ & ~ & ~ & ~  \\
+    7 & 50 & \textbf{1} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 11.6 & 12.2 & 13.0 & -231.0 & 160.5 & -231.0  \\
+    ~ & 50 & \textbf{10} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 11.0 & 11.6 & 12.4 & -220.8 & -247.0 & -164.0  \\
+    ~ & 50 & \textbf{25} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 10.8 & 11.5 & 12.4 & -259.0 & -243.1 & -224.0  \\
+    ~ & 50 & \textbf{50} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 10.7 & 11.2 & 11.9 & -259.0 & -252.4 & -245.0 \\
+    ~ & 50 & \textbf{75} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~  \\
+    ~ & 50 & \textbf{100} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~  \\
+    ~ & 50 & \textbf{200} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~  \\
+
     \hline
     \end{tabular}
     \caption {Steps with the corresponding results from the parameter settings experiment} 
