--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -31,6 +31,7 @@
 \usepackage[figuresright]{rotating} %For rotating tables
 \setcitestyle{square}
 \newcommand{\pluseq}{\mathrel{+}=}
+\newcommand{\minuseq}{\mathrel{-}=}
 
 % spacing: how to read {12pt plus 4pt minus 2pt}
 %           12pt is what we would like the spacing to be
